@@ -1,3 +1,8 @@
+2007-02-21  Tatsuya BIZENN  <bizenn@arthub.net>
+
+	* Change: dbd_mysql.c, dbd_mysql.h, dbd_mysqllib.stub
+	  Add support of native prepared statement.
+
 2007-02-16  Tatsuya BIZENN  <bizenn@arthub.net>
 
 	* Change: dbd/mysql.scm, dbd_mysql.c
